--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,4 +1,4 @@
-<%- include ('templates/header'); -%>
+<%- include ('templates/header');-%>
 
 <div class='container'>
     <div class='jumbotron'>
@@ -8,10 +8,17 @@
 
     <div id="results">
 		<div class="row">
-			<img class="col-sm-3" id="cover" src="">
-			<div class="col-sm-4" id="info"></div>
+		        <img class="col-sm-3 cover" id="cover" src=<%=data.cover.large%>>
+			<div class="col-sm-4 info" id="info">
+			    Title: <%=data.title%><br>
+			    Author: <%=data.authors[0].name%><br>
+			    Publish: <%=data.publish_date%><br>
+			    Publisher: <%=data.publishers[0].name%><br>
+			    ISBN: <%=isbn%><br>
+			    Pages: <%=data.number_of_pages%><br>
+		    </div>
 		</div>	
 	</div>
 </div>
-
+<br>
 <%- include ('templates/footer'); -%>
